<resources>
    <string name="app_name">KotlinExampleProject</string>
    <string name="launch_form">Lanzar formulario</string>
    <string name="launch_dialog">Lanzar dialog</string>
    <string name="launch_recycler">Lanzar RecyclerView</string>
    <string name="launch_toast">Lanzar toast</string>
    <string name="complete_name">Nombre completo</string>
    <string name="age">Edad</string>
    <string name="aceptar">Aceptar</string>
    <string name="error_fill_name">Rellena el campo nombre</string>
    <string name="error_fill_age">Rellena el campo edad</string>
    <string name="adult">adulto</string>
    <string name="hi_">"Hola "</string>
    <string name="you_are_">" tu eres "</string>
    <string name="child">niño</string>
    <string name="toas_anko">Éste es un Toast de ANKO</string>
    <string name="hi_custom_dialog_anko">Hola soy un Custom Dialog de ANKO</string>
    <string name="add">Agregar</string>
</resources>
