<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="8dp">

    <Button
        android:id="@+id/launch_form_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/launch_dialog_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launch_form_btn"/>

    <Button
        android:id="@+id/launch_recycler_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launch_dialog_btn"/>

    <Button
        android:id="@+id/launch_toast_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_toast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/launch_recycler_btn"/>

</android.support.constraint.ConstraintLayout>